--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>周大路</strong>，一只JAVA程序猿，现在济南工作。</p>
+    <p>Hey，我是<strong>党一桐</strong>，西安交大少年班2019级学生</p>
 
-    <p>这是我的利用@qiubaiying的文章 搭建的 个人博客。我在GitHub主页<a href="https://github.com/superZhouDaLu">👉GitHub·superZhouDaLu</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用@qiubaiying的文章 搭建的 个人博客。我在GitHub主页<a href="https://github.com/NaiveTomcat">👉GitHub·NaiveTomcat</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
@@ -29,7 +29,6 @@ header-img: "img/post-bg-rwd.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
@@ -39,11 +38,10 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
+    <p>Hi, I am <strong>Tom Dang</strong>，you can call me <strong>Naive Tomcat</strong>. I am a student from XJTU Youth Class 2019</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/NaiveTomcat">Github·NaiveTomcat</a>.</p>
     
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
 
     <h5>Talks</h5>
 
@@ -51,7 +49,6 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
     </ul>
 </div> -->
 
